--- a/navigator/css/app.css
+++ b/navigator/css/app.css
@@ -23,4 +23,11 @@ h1 {
 p {
   font-size: inherit;
 }
-
+.collection-item
+{
+    height:100px;
+    font-size:1.8em;
+    line-height:3em !important;
+    text-align:center;
+    cursor:pointer;
+}
